--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,114 @@ ThumbsProject\thumbs_GPIO\.ipynb_checkpoints\dataset-checkpoint.py
 ThumbsProject\thumbs_GPIO\.ipynb_checkpoints\thumbs_with_GPIO-checkpoint.ipynb
 ThumbsProject\thumbs_GPIO\.ipynb_checkpoints\utils-checkpoint.py
 ThumbsProject\thumbs_GPIO\__pycache__\dataset.cpython-36.pyc
+MultiClassificationTest/camera.py
+MultiClassificationTest/__pycache__/utils.cpython-36.pyc
+MultiClassificationTest/__pycache__/enesUtils.cpython-36.pyc
+MultiClassificationTest/__pycache__/dataset.cpython-36.pyc
+MultiClassificationTest/__pycache__/camera.cpython-36.pyc
+MultiClassificationTest/.ipynb_checkpoints/split_test-checkpoint.ipynb
+MultiClassificationTest/.ipynb_checkpoints/multiclass-checkpoint.ipynb
+MultiClassificationTest/.ipynb_checkpoints/enesUtils-checkpoint.py
+MultiClassificationTest/.ipynb_checkpoints/camera-checkpoint.py
+Mc.zip
+ThumbsProject/thumbs_GPIO/__pycache__/utils.cpython-36.pyc
+ThumbsProject/thumbs_GPIO/__pycache__/dataset.cpython-36.pyc
+ThumbsProject/thumbs_GPIO/.ipynb_checkpoints/utils-checkpoint.py
+ThumbsProject/thumbs_GPIO/.ipynb_checkpoints/thumbs_with_GPIO-checkpoint.ipynb
+ThumbsProject/thumbs_GPIO/.ipynb_checkpoints/dataset-checkpoint.py
+MultiClassificationTest/XvsO_A/X/d4ebb830-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d4b70446-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d47177be-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d434533e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d3fe2e26-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d3c03e9a-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d38dccd0-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d3583a52-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d31f9b02-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d2e7f40e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d2a4d034-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d26502c4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d22362ce-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/d1d598be-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b6c9164a-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b66f47a0-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b6097b78-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b5b409b8-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b55182b6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b4dfcda6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b45fb454-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b260b8f6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b1eb3324-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b17b41a4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b107ec90-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/b04dcdec-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/afc52514-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/aeb3f3da-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/ae40b460-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/adc2fc50-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/ad333b74-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/acbc25e8-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/ac18e950-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/ab9b4d9c-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a9bb5bf2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a92f1584-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a848ef46-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a75de3e8-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a6da9362-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a6371bf6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a5a25728-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a51a2bd2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a489a404-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a3ff81d4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a359ddce-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a2a0eb0c-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/X/a19bbf8e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cf2b947e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cee76268-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ce97a02a-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ce578706-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ce0fc8e4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cdcc517c-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cd8e2c30-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cd471f7a-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ccf1da06-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cb61b54e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cb28502e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/caf49c7a-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/cab7cb2e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ca7694a6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/ca2ece6e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c9e2f034-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c99ed5a2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c952e32c-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c8d712ce-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c88ae598-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c83c2430-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c7f284c4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c7940778-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c632e2aa-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c5dbf5e4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c588c108-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c53f037e-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c4ed7266-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c493f434-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c4423e14-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c3e309e4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c37c5140-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c31900d6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c2b7082c-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c2515720-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c1ec4fe2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c1814148-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c11b85a6-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c0a72012-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/c029bb36-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bfb227c4-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bf478bb2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/beaa74ee-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bddff926-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bd1a3bd2-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bc7db9b0-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bc0c1df0-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/bb923f76-9829-11ed-942d-16f63a1aa8c9.jpg
+MultiClassificationTest/XvsO_A/O/baac9034-9829-11ed-942d-16f63a1aa8c9.jpg
